Fix passphrase input on small screens.

--- a/c2FmZQ/internal/pwa/style.css
+++ b/c2FmZQ/internal/pwa/style.css
@@ -183,8 +183,8 @@ a {
   transform: translate(-50%, -50%);
   padding: 10px;
   border: 1px solid red;
-  white-space: nowrap;
   box-shadow: 5px 5px 5px black;
+  max-width: 80vw;
 }
 #loggedout-div {
   position: fixed;
